[gd_scene load_steps=13 format=2]

[ext_resource path="res://juego/HUD/ContenedorVidas.tscn" type="PackedScene" id=1]
[ext_resource path="res://juego/HUD/ContenedorLlaves.tscn" type="PackedScene" id=2]
[ext_resource path="res://juego/HUD/ContenedorMonedaBronce.tscn" type="PackedScene" id=3]
[ext_resource path="res://juego/HUD/ContenedorMonedaOro.tscn" type="PackedScene" id=4]
[ext_resource path="res://juego/HUD/ContenedorMonedaPlata.tscn" type="PackedScene" id=5]
[ext_resource path="res://juego/HUD/HUD.gd" type="Script" id=6]
[ext_resource path="res://Recursos/HUD/lifebar.png" type="Texture" id=7]
[ext_resource path="res://Recursos/HUD/lifebar_2_3.png" type="Texture" id=8]
[ext_resource path="res://Recursos/HUD/lifebar_full.png" type="Texture" id=9]
[ext_resource path="res://Recursos/HUD/lifebar_1_3.png" type="Texture" id=10]
[ext_resource path="res://Recursos/Fonts/Kenney Rocket Square.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0.478431, 0, 0, 1 )
font_data = ExtResource( 11 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 152.524, 22.3099 ],
"_edit_use_anchors_": false
}

[node name="ContenedorLlaves" parent="." instance=ExtResource( 2 )]
margin_left = 25.2269
margin_top = 25.2269
margin_right = 174.227
margin_bottom = 81.2269

[node name="ContenedorVidas" parent="." instance=ExtResource( 1 )]
margin_left = 25.2269
margin_top = 94.1804
margin_right = 174.227
margin_bottom = 150.18

[node name="ContenedorMonedaBronce" parent="." instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -158.0
margin_top = 110.514
margin_right = -20.0
margin_bottom = 147.514

[node name="ContenedorMonedaOro" parent="." instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -158.0
margin_top = 25.469
margin_right = -20.0
margin_bottom = 62.469

[node name="ContenedorMonedaPlata" parent="." instance=ExtResource( 5 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -158.0
margin_top = 68.936
margin_right = -20.0
margin_bottom = 105.936

[node name="Lifebar" type="NinePatchRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -912.0
margin_top = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarFull" type="Sprite" parent="Lifebar"]
position = Vector2( 307.013, -9.34387 )
texture = ExtResource( 9 )

[node name="Bar2-3" type="Sprite" parent="Lifebar"]
position = Vector2( 307.013, -9.34387 )
texture = ExtResource( 8 )

[node name="Bar1-3" type="Sprite" parent="Lifebar"]
position = Vector2( 307.013, -9.34387 )
texture = ExtResource( 10 )

[node name="BarEmply" type="Sprite" parent="Lifebar"]
position = Vector2( 307.013, -9.34387 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Lifebar"]
margin_top = -44.0
margin_right = 342.0
margin_bottom = -19.0
custom_fonts/font = SubResource( 1 )
text = "Evil Saltarina"
__meta__ = {
"_edit_use_anchors_": false
}
